test/regress/coverage-error-malformed-amount.test
; Test malformed amount with too many periods (exercises amount.cc parsing)

2024/01/15 * Test
    Expenses:Food              $1.2.3
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 4:
While parsing posting:
  Expenses:Food              $1.2.3
                             ^^^^^^
Error: Too many periods in amount
end test
